--- a/public/lines.html
+++ b/public/lines.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <a href="/">
+        <a href="index.html">
             <h1>מושגים בגיאומטריה</h1>
         </a>
     </header>
