--- a/public/triangles.html
+++ b/public/triangles.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>משולשים</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
     <link rel="stylesheet" href="css/main.min.css">
 </head>
@@ -12,11 +12,10 @@
 <body>
     <header>
         <a href="index.html">
-            <h1>מושגים בגיאומטריה</h1>
+            <h1>משולשים</h1>
         </a>
     </header>
     <main>
-        <h2>:משולשים</h2>
         <ul>
             <a href="">
                 <li>משולש שווה שוקיים <i class="fa-solid fa-arrow-up-right-from-square fa-flip-horizontal"></i></li>
