--- a/public/lines.html
+++ b/public/lines.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>קווים</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
     <link rel="stylesheet" href="css/main.min.css">
 </head>
@@ -12,11 +12,10 @@
 <body>
     <header>
         <a href="index.html">
-            <h1>מושגים בגיאומטריה</h1>
+            <h1>קווים</h1>
         </a>
     </header>
     <main>
-        <h2>:קווים</h2>
         <ul>
             <li id="height">
                 <h3>גובה במשולש </h3><i class="fa-solid fa-arrow-left"></i>
