--- a/public/squares/trapezes/trapeze.html
+++ b/public/squares/trapezes/trapeze.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <a href="../squares.html">
+        <a href="../trapezes.html">
             <h1>טרפז</h1>
         </a>
     </header>
@@ -75,7 +75,7 @@
                 </div>
             </li>
         </ul>
-        <div data="parallelogram,2,1"></div>
+        <div data="trapeze,2,1"></div>
     </main>
     <footer>
         <h2>זכויות יוצרים שמורים לאדם קורסונסקי ©</h2>
