--- a/public/squares/rhombus.html
+++ b/public/squares/rhombus.html
@@ -60,7 +60,7 @@
                 <div>
                     <h3>דרכים עקיפות:</h3>
                     <ol start="2">
-                        <li>במקבילית יש זוג צלעות סמוכות שוות</li>
+                        <li>במקבילית זוג צלעות סמוכות שוות</li>
                         <li>במקבילית האלכסונים מאונכים זה לזה</li>
                         <li>במקבילית האלכסונים חוצים את זוויות הראש</li>
                     </ol>
