--- a/public/triangles.html
+++ b/public/triangles.html
@@ -20,6 +20,8 @@
             <a href="">
                 <li>משולש שווה שוקיים <i class="fa-solid fa-arrow-up-right-from-square fa-flip-horizontal"></i></li>
             </a><a href="">
+                <li>משולש שווה צלעות <i class="fa-solid fa-arrow-up-right-from-square fa-flip-horizontal"></i></li>
+            </a><a href="">
                 <li>משולש ישר זווית <i class="fa-solid fa-arrow-up-right-from-square fa-flip-horizontal"></i></li>
             </a>
         </ul>
