--- a/public/squares/trapezes/trapeze.html
+++ b/public/squares/trapezes/trapeze.html
@@ -16,15 +16,15 @@
     </header>
     <main id="elementDescribe">
         <h2>הגדרה: </h2>
-        <p>מקבילית היא מרובע המורכב משני זוגות של צלעות נגדיות מקבילות.</p>
+        <p>טרפז הוא מרובע המורכב מזוג צלעות מקבילות וזוג צלעות לא מקבילות.</p>
         <h2>תכונות: </h2>
         <ul>
             <li>
                 <div>
                     <h3>צלעות:</h3>
                     <ol>
-                        <li>צלעות נגדיות מקבילות זו לזו</li>
-                        <li>צלעות נגדיות שוות זו לזו</li>
+                        <li>זוג אחד של צלעות מקבילות</li>
+                        <li>זוג אחד של צלעות לא מקבילות</li>
                     </ol>
                 </div>
             </li>
@@ -32,50 +32,17 @@
                 <div>
                     <h3>זוויות:</h3>
                     <ol start="3">
-                        <li>זוויות נגדיות שוות זו לזו</li>
-                        <li>זוויות סמוכות משלימות ל-˚180</li>
-                    </ol>
-                </div>
-            </li>
-            <li>
-                <div>
-                    <h3>אלכסונים:</h3>
-                    <ol start="5">
-                        <li>האלכסונים חוצים זה את זה</li>
+                        <li>זוויות הנשענות על אותה שוק משלימות ל-˚180</li>
                     </ol>
                 </div>
             </li>
         </ul>
-        <h2>הוכחת מקבילית:</h2>
-        <ul>
-            <li>
-                <div>
-                    <h3>צלעות:</h3>
-                    <ol>
-                        <li>במרובע שני זוגות של צלעות נגדיות מקבילות</li>
-                        <li>במרובע שני זוגות של צלעות נגדיות שוות</li>
-                        <li>במרובע זוג של צלעות נגדיות שוות ומקבילות</li>
-                    </ol>
-                </div>
-            </li>
-            <li>
-                <div>
-                    <h3>זוויות:</h3>
-                    <ol start="4">
-                        <li>במרובע שני זוגות של זוויות נגדיות שוות</li>
-                    </ol>
-                </div>
-            </li>
-            <li>
-                <div>
-                    <h3>אלכסונים:</h3>
-                    <ol start="5">
-                        <li>במרובע האלכסונים חוצים זה את זה</li>
-                    </ol>
-                </div>
-            </li>
-        </ul>
-        <div data="trapeze,2,1"></div>
+        <h2>הוכחת טרפז:</h2>
+        <ol>
+            <li>במרובע זוג צלעות מקבילות וזוג צלעות לא מקבילות</li>
+            <li>במרובע זוג צלעות מקבילות ולא שוות</li>
+        </ol>
+        <div data="trapeze,5,2"></div>
     </main>
     <footer>
         <h2>זכויות יוצרים שמורים לאדם קורסונסקי ©</h2>
