--- a/public/lines.html
+++ b/public/lines.html
@@ -29,15 +29,15 @@
                 <h3>חוצה זווית במשולש </h3><i class="fa-solid fa-arrow-left"></i>
                 <p></p>
             </li>
-            <a href="">
-                <li>קטע אמצעים במשולש <i class="fa-solid fa-arrow-up-right-from-square fa-flip-horizontal"></i></li>
-            </a><a href="">
-                <li>קטע אמצעים בטרפז <i class="fa-solid fa-arrow-up-right-from-square fa-flip-horizontal"></i></li>
-            </a>
             <li id="perpendicular">
                 <h3>אנך </h3><i class="fa-solid fa-arrow-left"></i>
                 <p></p>
             </li>
+            <a href="lines/triangleMidsegment.html">
+                <li>קטע אמצעים במשולש <i class="fa-solid fa-arrow-up-right-from-square fa-flip-horizontal"></i></li>
+            </a><a href="lines/trapezeMidsegment.html">
+                <li>קטע אמצעים בטרפז <i class="fa-solid fa-arrow-up-right-from-square fa-flip-horizontal"></i></li>
+            </a>
         </ul>
     </main>
     <footer>
