--- a/public/points.html
+++ b/public/points.html
@@ -25,7 +25,7 @@
                 <h3>אמצע צלע </h3><i class="fa-solid fa-arrow-left"></i>
                 <p></p>
             </li>
-            <a href="">
+            <a href="points/lineDevidersMiddlePoint.html">
                 <li>נקודת מפגש תיכונים במשולש <i class="fa-solid fa-arrow-up-right-from-square fa-flip-horizontal"></i>
                 </li>
             </a>
