--- a/public/triangles.html
+++ b/public/triangles.html
@@ -17,12 +17,18 @@
     </header>
     <main>
         <ul>
-            <a href="">
+            <li id="triangleAnglesSum">
+                <h3>סכום זוויות במשולש </h3><i class="fa-solid fa-arrow-left"></i>
+                <p></p>
+            </li>
+            <a href="triangles/isoscelesTriangle.html">
                 <li>משולש שווה שוקיים <i class="fa-solid fa-arrow-up-right-from-square fa-flip-horizontal"></i></li>
-            </a><a href="">
+            </a><a href="triangles/equilateralTriangle.html">
                 <li>משולש שווה צלעות <i class="fa-solid fa-arrow-up-right-from-square fa-flip-horizontal"></i></li>
-            </a><a href="">
+            </a><a href="triangles/rightAngledTriangle.html">
                 <li>משולש ישר זווית <i class="fa-solid fa-arrow-up-right-from-square fa-flip-horizontal"></i></li>
+            </a><a href="triangles/congruentTriangles.html">
+                <li>משולשים חופפים <i class="fa-solid fa-arrow-up-right-from-square fa-flip-horizontal"></i></li>
             </a>
         </ul>
     </main>
