--- a/public/triangles/equilateralTriangle.html
+++ b/public/triangles/equilateralTriangle.html
@@ -4,26 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>משולש ישר זווית</title>
+    <title>משולש שווה צלעות</title>
     <link rel="stylesheet" href="../css/main.min.css">
 </head>
 
 <body>
     <header>
         <a href="../triangles.html">
-            <h1>משולש ישר זווית</h1>
+            <h1>משולש שווה צלעות</h1>
         </a>
     </header>
     <main id="elementDescribe">
         <h2>הגדרה: </h2>
-        <p>משולש ישר זווית הוא משולש בעל זווית ישרה.</p>
+        <p>משולש שווה צלעות הוא משולש שכל צלעותיו שוות.</p>
         <h2>תכונות: </h2>
         <ul>
             <li>
                 <div>
                     <h3>צלעות:</h3>
                     <ol>
-                        <li>הניצב מול הזווית בת ˚30 שווה לחצי היתר</li>
+                        <li>כל הצלעות שוות</li>
                     </ol>
                 </div>
             </li>
@@ -31,7 +31,7 @@
                 <div>
                     <h3>זוויות:</h3>
                     <ol start="2">
-                        <li>אחת הזוויות ישרה</li>
+                        <li>כל הזוויות שוות ל-˚60</li>
                     </ol>
                 </div>
             </li>
@@ -39,18 +39,18 @@
                 <div>
                     <h3>גובה, תיכון וחוצה זווית:</h3>
                     <ol start="3">
-                        <li>תיכון ליתר שווה לחצי מהיתר</li>
+                        <li>גבהים, תיכונים וחוצי זוויות מתלכדים</li>
                     </ol>
                 </div>
             </li>
         </ul>
-        <h2>הוכחת משולש ישר זווית:</h2>
+        <h2>הוכחת משולש שווה צלעות:</h2>
         <ul>
             <li>
                 <div>
                     <h3>צלעות:</h3>
                     <ol>
-                        <li>צלע מול הזווית בת ˚30 שווה לחצי מצלע אחרת</li>
+                        <li>במשוולש כל הצלעות שוות</li>
                     </ol>
                 </div>
             </li>
@@ -58,7 +58,7 @@
                 <div>
                     <h3>זוויות:</h3>
                     <ol start="2">
-                        <li>במשולש יש זווית ישרה</li>
+                        <li>במשולש כל הזוויות שוות</li>
                     </ol>
                 </div>
             </li>
@@ -66,16 +66,14 @@
                 <div>
                     <h3>גובה, תיכון וחוצה זווית:</h3>
                     <ol start="3">
-                        <li>תיכון לאחת הצלעות שווה לחצי מהצלע</li>
+                        <li>במשולש שני גבהים ושני תיכונים מתלקדים</li>
+                        <li>במשולש שני גבהים ושני חוצי זוויות מתלקדים</li>
+                        <li>במשולש שני תיכונים ושני חוצי זוויות מתלקדים</li>
                     </ol>
                 </div>
             </li>
         </ul>
-        <div id="flex">
-            <div data="rightAngledTriangle,3,2"></div>
-            <div data="rightAngledTriangle2,3,2"></div>
-            <div data="rightAngledTriangle3,3,2"></div>
-        </div>
+        <div data="equilateralTriangle,1,1"></div>
     </main>
     <footer>
         <h2>זכויות יוצרים שמורים לאדם קורסונסקי ©</h2>
