--- a/public/triangles/isoscelesTriangle.html
+++ b/public/triangles/isoscelesTriangle.html
@@ -10,8 +10,8 @@
 
 <body>
     <header>
-        <a href="../squares.html">
-            <h1>משולש שווה שוקיים</h1>
+        <a href="../triangles.html">
+            <h1>משולש שווה שוקיים (משו״ש)</h1>
         </a>
     </header>
     <main id="elementDescribe">
@@ -23,7 +23,7 @@
                 <div>
                     <h3>צלעות:</h3>
                     <ol>
-                        <li>שני זוגות של צלעות סמוכות שוות</li>
+                        <li>השוקיים שוות</li>
                     </ol>
                 </div>
             </li>
@@ -37,21 +37,43 @@
             </li>
             <li>
                 <div>
-                    <h3>אלכסונים:</h3>
+                    <h3>גובה, תיכון וחוצה זווית:</h3>
                     <ol start="3">
-                        <li>האלכסונים מאונכים</li>
-                        <li>האלכסון הראשי חוצה את האלכסון המשני</li>
-                        <li>האלכסון הראשי חוצה את זוויות הראש</li>
+                        <li>גובה לבסיס, תיכון לבסיס וחוצה זווית הראש מתלכדים</li>
                     </ol>
                 </div>
             </li>
         </ul>
-        <h2>הוכחת דלתון:</h2>
-        <ol>
-            <li>במרובע יש שני זוגות של צלעות סמוכות שוות</li>
-            <li>במרובע האלכסונים מאונכים זה לזה ואחד האלכסונים חוצה את האלכסון השני</li>
-        </ol>
-        <div data="dalton,2,3"></div>
+        <h2>הוכחת משולש שווה שוקיים:</h2>
+        <ul>
+            <li>
+                <div>
+                    <h3>צלעות:</h3>
+                    <ol>
+                        <li>במשוולש יש שתי צלעות שוות</li>
+                    </ol>
+                </div>
+            </li>
+            <li>
+                <div>
+                    <h3>זוויות:</h3>
+                    <ol start="2">
+                        <li>במשולש יש שתי זוויות שוות</li>
+                    </ol>
+                </div>
+            </li>
+            <li>
+                <div>
+                    <h3>גובה, תיכון וחוצה זווית:</h3>
+                    <ol start="3">
+                        <li>במשולש גובה ותיכון מתלקדים</li>
+                        <li>במשולש גובה וחוצה זווית מתלקדים</li>
+                        <li>במשולש תיכון וחוצה זווית מתלקדים</li>
+                    </ol>
+                </div>
+            </li>
+        </ul>
+        <div data="isoscelesTriangle,1,1"></div>
     </main>
     <footer>
         <h2>זכויות יוצרים שמורים לאדם קורסונסקי ©</h2>
