--- a/public/points/lineDevidersMiddlePoint.html
+++ b/public/points/lineDevidersMiddlePoint.html
@@ -19,13 +19,13 @@
         <p>נקודת מפגש תיכונים במשולש היא נקודה שבא נפגשים כל תיכוני המשולש.</p>
         <h2>תכונות: </h2>
         <ol>
-            <li id="notList">נקודת מפגש תיכונים במשולש מחלקת כל תיכון לשני קטעים, כך שהקטע הקרוב לקודקוד דול פי 2 מהקטע
-                הקרוב לצע
+            <li id="notList">נקודת מפגש תיכונים במשולש מחלקת כל תיכון לשני קטעים, כך שהקטע הקרוב לקודקוד גדול פי 2 מהקטע
+                הקרוב לצלע
             </li>
         </ol>
         <h2>הוכחת קטע אמצעים במשולש:</h2>
         <ol>
-            <li>אם נקודה במשולש היא נקודת מפגש שני תיכונים במשולש, אז היא נקודת מפגש תיכונים במשולש</li>
+            <li>אם נקודה במשולש היא נקודת מפגש של שני תיכונים במשולש, אז היא נקודת מפגש תיכונים במשולש</li>
             <li>אם נקודה נמצאת על תיכון ומחלקת אותו לשני קטעים כך שהקטע הקרוב לקודקוד גדול פי 2 מהקטע הקרוב לצלע, אז
                 הנקודה היא נקודת מפגש התיכונים במשולש</li>
         </ol>
