--- a/public/lines.html
+++ b/public/lines.html
@@ -26,7 +26,7 @@
                 <p></p>
             </li>
             <li id="angleDevider">
-                <h3>חוצה זווית במשולש </h3><i class="fa-solid fa-arrow-left"></i>
+                <h3>חוצה זווית </h3><i class="fa-solid fa-arrow-left"></i>
                 <p></p>
             </li>
             <li id="perpendicular">
@@ -37,6 +37,8 @@
                 <li>קטע אמצעים במשולש <i class="fa-solid fa-arrow-up-right-from-square fa-flip-horizontal"></i></li>
             </a><a href="lines/trapezeMidsegment.html">
                 <li>קטע אמצעים בטרפז <i class="fa-solid fa-arrow-up-right-from-square fa-flip-horizontal"></i></li>
+            </a><a href="lines/middlePerpendicular.html">
+                <li>אנך אמצעים <i class="fa-solid fa-arrow-up-right-from-square fa-flip-horizontal"></i></li>
             </a>
         </ul>
     </main>
