--- a/public/lines/trapezeMidsegment.html
+++ b/public/lines/trapezeMidsegment.html
@@ -25,9 +25,9 @@
         </ol>
         <h2>הוכחת קטע אמצעים בטרפז:</h2>
         <ol>
-            <li>קטע המחבר אמצעי שתי השוקיים בטרפז נקרא קטע אמצעים בטרפז</li>
-            <li>קטע בטרפז היוצא מאמצע אחת השוקיים ומקביל לאחד הבסיסים נקרא קטע אמצעים בטרפז</li>
-            <li>קטע בטרפז המחבר את שתי השוקיים בטרפז, מקביל לאחד הבסיסים ושווה למחצית סכומם נקרא קטע אמצעים בטרפז</li>
+            <li>קטע המחבר אמצעי שתי השוקיים בטרפז</li>
+            <li>קטע בטרפז היוצא מאמצע אחת השוקיים ומקביל לאחד הבסיסים</li>
+            <li>קטע בטרפז המחבר את שתי השוקיים בטרפז, מקביל לאחד הבסיסים ושווה למחצית סכומם</li>
         </ol>
         <div data="trapezeMidsegment,2,1"></div>
     </main>
