--- a/public/lines/triangleMidsegment.html
+++ b/public/lines/triangleMidsegment.html
@@ -25,9 +25,9 @@
         </ol>
         <h2>הוכחת קטע אמצעים במשולש:</h2>
         <ol>
-            <li>קטע המחבר אמצעי שתי צלעות במשולש נקרא קטע אמצעים במשולש</li>
-            <li>קטע במשולש היוצא מאמצע צלע אחת ומקביל לצלע אחרת נקרא קטע אמצעים במשולש</li>
-            <li>קטע במשולש המחבר שתי צלעות במשולש, מקביל לצלע השלישית ושווה למחציתה נקרא קטע אמצעים במשולש</li>
+            <li>קטע המחבר אמצעי שתי צלעות במשולש</li>
+            <li>קטע במשולש היוצא מאמצע צלע אחת ומקביל לצלע אחרת</li>
+            <li>קטע במשולש המחבר שתי צלעות במשולש, מקביל לצלע השלישית ושווה למחציתה</li>
         </ol>
         <div data="triangleMidsegment,3,2"></div>
     </main>
