--- a/public/points/lineDevidersMiddlePoint.html
+++ b/public/points/lineDevidersMiddlePoint.html
@@ -25,9 +25,8 @@
         </ol>
         <h2>הוכחת קטע אמצעים במשולש:</h2>
         <ol>
-            <li>אם נקודה במשולש היא נקודת מפגש של שני תיכונים במשולש, אז היא נקודת מפגש תיכונים במשולש</li>
-            <li>אם נקודה נמצאת על תיכון ומחלקת אותו לשני קטעים כך שהקטע הקרוב לקודקוד גדול פי 2 מהקטע הקרוב לצלע, אז
-                הנקודה היא נקודת מפגש התיכונים במשולש</li>
+            <li>נקודה במשולש היא נקודת מפגש של שני תיכונים במשולש</li>
+            <li>נקודה נמצאת על תיכון ומחלקת אותו לשני קטעים כך שהקטע הקרוב לקודקוד גדול פי 2 מהקטע הקרוב לצלע</li>
         </ol>
         <div data="lineDevidersMiddlePoint,3,2"></div>
     </main>
