--- a/public/points.html
+++ b/public/points.html
@@ -18,15 +18,30 @@
     <main>
         <ul>
             <li id="lineMiddle">
-                <h3>אמצע קטע </h3><i class="fa-solid fa-arrow-left"></i>
+                <h3>אמצע קטע</h3><i class="fa-solid fa-arrow-left"></i>
                 <p></p>
             </li>
             <li id="shapeLineMiddle">
-                <h3>אמצע צלע </h3><i class="fa-solid fa-arrow-left"></i>
+                <h3>אמצע צלע</h3><i class="fa-solid fa-arrow-left"></i>
                 <p></p>
             </li>
             <a href="points/lineDevidersMiddlePoint.html">
-                <li>נקודת מפגש תיכונים במשולש <i class="fa-solid fa-arrow-up-right-from-square fa-flip-horizontal"></i>
+                <li class="compact">
+                    נקודת מפגש תיכונים במשולש<i class="fa-solid fa-arrow-up-right-from-square fa-flip-horizontal"></i>
+                </li>
+            </a>
+            <a href="points/middlePerpendicularMiddlePoint.html">
+                <li class="compact">נקודת מפגש אנכים אמצעיים לצלעות במשולש<i
+                        class="fa-solid fa-arrow-up-right-from-square fa-flip-horizontal"></i>
+                </li>
+            </a>
+            <a href="points/pointOnAngleDevider.html">
+                <li>נקודה על חוצה זווית<i class="fa-solid fa-arrow-up-right-from-square fa-flip-horizontal"></i>
+                </li>
+            </a>
+            <a href="points/angleDeviderMiddlePoint.html">
+                <li class="compact">נקודת מפגש חוצי זוויות במשולש<i
+                        class="fa-solid fa-arrow-up-right-from-square fa-flip-horizontal"></i>
                 </li>
             </a>
         </ul>
