--- a/public/points/lineDevidersMiddlePoint.html
+++ b/public/points/lineDevidersMiddlePoint.html
@@ -23,7 +23,7 @@
                 הקרוב לצלע
             </li>
         </ol>
-        <h2>הוכחת קטע אמצעים במשולש:</h2>
+        <h2>הוכחה:</h2>
         <ol>
             <li>נקודה במשולש היא נקודת מפגש של שני תיכונים במשולש</li>
             <li>נקודה נמצאת על תיכון ומחלקת אותו לשני קטעים כך שהקטע הקרוב לקודקוד גדול פי 2 מהקטע הקרוב לצלע</li>
