--- a/public/squares/parallelogram.html
+++ b/public/squares/parallelogram.html
@@ -45,6 +45,14 @@
                     </ol>
                 </div>
             </li>
+            <li>
+                <div>
+                    <h3>שטח:</h3>
+                    <ol start="6">
+                        <li>שטח שווה למכפלה של צלע בגובה לאותו צלע</li>
+                    </ol>
+                </div>
+            </li>
         </ul>
         <h2>הוכחת מקבילית:</h2>
         <ul>
