--- a/public/squares/rectangle.html
+++ b/public/squares/rectangle.html
@@ -45,6 +45,14 @@
                     </ol>
                 </div>
             </li>
+            <li>
+                <div>
+                    <h3>שטח:</h3>
+                    <ol start="6">
+                        <li>שטח שווה למכפלת שתי צלעות סמוכות</li>
+                    </ol>
+                </div>
+            </li>
         </ul>
         <h2>הוכחת מלבן:</h2>
         <ul>
