--- a/public/squares/square.html
+++ b/public/squares/square.html
@@ -44,6 +44,15 @@
                     </ol>
                 </div>
             </li>
+            <li>
+                <div>
+                    <h3>שטח:</h3>
+                    <ol start="5">
+                        <li>שטח שווה למכפלה של צלע בעצמו</li>
+                        <li>שטח שווה למחצית המכפלה של אלכסון בעצמו</li>
+                    </ol>
+                </div>
+            </li>
         </ul>
         <h2>הוכחת ריבוע:</h2>
         <ul>
