--- a/public/squares/trapezes.html
+++ b/public/squares/trapezes.html
@@ -17,6 +17,10 @@
     </header>
     <main>
         <ul>
+            <li id="trapezeS">
+                <h3>שטח טרפז</h3><i class="fa-solid fa-arrow-left"></i>
+                <p></p>
+            </li>
             <a href="trapezes/trapeze.html">
                 <li>טרפז <i class="fa-solid fa-arrow-up-right-from-square fa-flip-horizontal"></i></li>
             </a><a href="trapezes/rightAngledTrapeze.html">
