--- a/public/triangles.html
+++ b/public/triangles.html
@@ -18,17 +18,23 @@
     <main>
         <ul>
             <li id="triangleAnglesSum">
-                <h3>סכום זוויות במשולש </h3><i class="fa-solid fa-arrow-left"></i>
+                <h3>סכום זוויות במשולש</h3><i class="fa-solid fa-arrow-left"></i>
+                <p></p>
+            </li>
+            <li id="triangleS">
+                <h3>שטח משולש</h3><i class="fa-solid fa-arrow-left"></i>
                 <p></p>
             </li>
             <a href="triangles/isoscelesTriangle.html">
-                <li>משולש שווה שוקיים <i class="fa-solid fa-arrow-up-right-from-square fa-flip-horizontal"></i></li>
+                <li>משולש שווה שוקיים<i class="fa-solid fa-arrow-up-right-from-square fa-flip-horizontal"></i></li>
             </a><a href="triangles/equilateralTriangle.html">
-                <li>משולש שווה צלעות <i class="fa-solid fa-arrow-up-right-from-square fa-flip-horizontal"></i></li>
+                <li>משולש שווה צלעות<i class="fa-solid fa-arrow-up-right-from-square fa-flip-horizontal"></i></li>
             </a><a href="triangles/rightAngledTriangle.html">
-                <li>משולש ישר זווית <i class="fa-solid fa-arrow-up-right-from-square fa-flip-horizontal"></i></li>
+                <li>משולש ישר זווית<i class="fa-solid fa-arrow-up-right-from-square fa-flip-horizontal"></i></li>
             </a><a href="triangles/congruentTriangles.html">
-                <li>משולשים חופפים <i class="fa-solid fa-arrow-up-right-from-square fa-flip-horizontal"></i></li>
+                <li>משולשים חופפים<i class="fa-solid fa-arrow-up-right-from-square fa-flip-horizontal"></i></li>
+            </a><a href="triangles/talas.html">
+                <li>משפט תלס<i class="fa-solid fa-arrow-up-right-from-square fa-flip-horizontal"></i></li>
             </a>
         </ul>
     </main>
