--- a/public/triangles/rightAngledTriangle.html
+++ b/public/triangles/rightAngledTriangle.html
@@ -43,6 +43,14 @@
                     </ol>
                 </div>
             </li>
+            <li>
+                <div>
+                    <h3>שטח:</h3>
+                    <ol start="4">
+                        <li>שטח שווה למחצית מכפלת הניצבים</li>
+                    </ol>
+                </div>
+            </li>
         </ul>
         <h2>הוכחת משולש ישר זווית:</h2>
         <ul>
