--- a/public/squares/dalton.html
+++ b/public/squares/dalton.html
@@ -45,6 +45,14 @@
                     </ol>
                 </div>
             </li>
+            <li>
+                <div>
+                    <h3>שטח:</h3>
+                    <ol start="6">
+                        <li>שטח שווה למחצית המכפלה של האלכסונים</li>
+                    </ol>
+                </div>
+            </li>
         </ul>
         <h2>הוכחת דלתון:</h2>
         <ol>
